--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,23 @@
-
+.header {
+    color: black;
+    background-color: antiquewhite;
+    opacity: 0.7;
+    width: 100%;
+    margin: 0;
+    border: 0;
+  }
+  .header li {
+    display: inline;
+  }
+  
+  .inicio-uno {
+    text-align: center;
+  }
+  
+  .inicio {
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+    padding-left: 9px;
+  }
+  
