--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
 .header {
     color: black;
     background-color: antiquewhite;
